[gd_scene load_steps=4 format=3 uid="uid://dxuiv0flwd2jt"]

[ext_resource type="Theme" uid="uid://brmsm8x6ntpna" path="res://theme/furnace_theme.tres" id="1_fa1kw"]
[ext_resource type="Script" path="res://scripts/ui/game_submenu.gd" id="2_submenu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m07ah"]
bg_color = Color(0.06879826, 0.06879829, 0.06879823, 1)

[node name="GameSubmenu" type="Control"]
script = ExtResource("2_submenu")
custom_minimum_size = Vector2(128, 80)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -512.0
offset_bottom = -280.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fa1kw")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(128, 80)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.19376665, 0.13948467, 0.17494023, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="MoneyRow" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/MoneyRow"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "MONEY"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/CenterContainer/VBoxContainer/MoneyRow"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_fa1kw")
theme_override_styles/panel = SubResource("StyleBoxFlat_m07ah")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer/MoneyRow/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MoneyValue" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/MoneyRow/Panel/CenterContainer"]
layout_mode = 2
text = "$420"
horizontal_alignment = 1

[node name="LevelRow" type="HBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/LevelRow"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "LEVEL"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/CenterContainer/VBoxContainer/LevelRow"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_fa1kw")
theme_override_styles/panel = SubResource("StyleBoxFlat_m07ah")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer/LevelRow/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LevelValue" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/LevelRow/Panel/CenterContainer"]
layout_mode = 2
text = "1"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "START LEVEL"
